# recipe_api

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  index.html  main.py  pyproject.toml  requirements.txt  vercel.json
smilecook/: __init__.py  app.py  config.py  extensions.py  mailgun.py  requirements.txt  utils.py
smilecook/migrations/versions/: 523c23afa635_.py  61e58c816b27_.py  6793c4c0c8b8_.py  cad831b463bd_.py
smilecook/models/: recipe.py  user.py
smilecook/resources/: recipe.py  token.py  user.py
smilecook/schemas/: pagination.py  recipe.py  user.py
smilecook/templates/: email.html
