[project]
name = "recipe_api"
version = "0.1.0"
dependencies = [
    "alembic>=1.15.2",
    "flask>=3.1.1",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=3.12",
    "flask-migrate>=4.1.0",
    "flask-restful>=0.3.10",
    "flask-reuploaded>=1.4.0",
    "marshmallow>=4.0.0",
    "pillow>=11.2.1",
    "sqlalchemy>=2.0.41",
    "waitress",
]

[tool.uv]
# Optional: specify python version, etc.
